fix clipping of the github fork
[fixes #31]

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -19,6 +19,10 @@ footer {
     width: 100%;
 }
 
+.github-fork-ribbon-wrapper {
+    overflow: visible;
+}
+
 .github-fork-ribbon {
     position: fixed !important;
 }
